--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="header__container container">
         <a class="header__container__logo" href="#">
-          <img src="./images/MaasLoopLogo.png" alt="logo image" />
+          <img src="../src/images/MaasloopLogo.jpg" alt="logo image" />
         </a>
         <nav class="header__container__nav">
           <a class="header__container__nav__link" href="#">Policz zyski</a>
@@ -75,7 +75,7 @@
           </h1>
           <img
             class="container__hero__imageProduct"
-            src="./images/maasloop_orange_open_white_s 1.png"
+            src="../src/images/maasloop_orange_open_white_s 1.jpg"
             alt="mashine"
           />
           <a class="container__hero__linkToBy" href="#">
