--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="header__container container">
         <a class="header__container__logo" href="#">
-          <img src="./images/MaasloopLogo.jpg" alt="logo image" />
+          <img src="images/MaasloopLogo.jpg" alt="logo image" />
         </a>
         <nav class="header__container__nav">
           <a class="header__container__nav__link" href="#">Policz zyski</a>
