add mobile markup

--- a/src/index.html
+++ b/src/index.html
@@ -119,18 +119,18 @@
             <h4 class="calc__container__quantityGlass__description">
               Ile pojemników na szkło zapełniasz miesięcznie?
             </h4>
-            <input class="calc__container__quantityGlass_input" type="text" />
+            <input class="calc__container__quantityGlass__input" type="number" placeholder="20" />
           </div>
           <div class="calc__container__sum">
             <h4 class="calc__container__sum__description">
               Ile płacisz za wywóz jednego pojemnika na szkło?
             </h4>
-            <input class="calc__container__sum__input" type="text" />
+            <input class="calc__container__sum__input" type="number" placeholder="20" />
           </div>
           <div class="calc__container__total">
             <h4 class="calc__container__total__description">Dzięki kruszarce zaoszczędzisz</h4>
-            <p class="calc__container__total_money">900 zł</p>
-            <p class="calc__container__total_period">rocznie.</p>
+            <p class="calc__container__total__money">900 zł</p>
+            <p class="calc__container__total__period">rocznie.</p>
           </div>
         </div>
       </section>
@@ -138,7 +138,7 @@
       <section class="offer">
         <div class="offer__container container">
           <p class="offer__container__description">To na co wydasz zaoszczędzoną gotówkę?</p>
-          <button class="offer__container__button" type="button">KUP 8499 zł</button>
+          <button class="offer__container__button" type="button"> <p> KUP <span>8499 zł</span></p> </span></button>
           <h3 class="offer__container__title">Brzmi dobrze? Uważaj. Dopiero się rozkręcamy!</h3>
         </div>
       </section>
