add desktop markup

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
           <img src="../src/images/MaasloopLogo.jpg" alt="logo image" />
         </a>
         <nav class="header__container__nav">
-          <a class="header__container__nav__link" href="#">Policz zyski</a>
-          <a class="header__container__nav__link" href="#">O produkcie</a>
-          <a class="header__container__nav__link" href="#">Kontakt</a>
-          <a class="header__container__nav__link" href="#">FAQ</a>
+          <a class="header__container__nav__link--1" href="#">Policz zyski</a>
+          <a class="header__container__nav__link--2" href="#">O produkcie</a>
+          <a class="header__container__nav__link--3" href="#">Kontakt</a>
+          <a class="header__container__nav__link--4" href="#">FAQ</a>
         </nav>
         <div class="header__container_menuBtns">
           <button class="header__container__buttonLang" type="button">
@@ -66,6 +66,7 @@
               <rect y="24" width="36" height="2" fill="#212121" />
             </svg>
           </button>
+          <a class="header__container__buttonOffer" href="#"> <span>KUP</span> </a>
         </div>
       </div>
     </header>
@@ -115,23 +116,25 @@
         <div class="calc__container container">
           <h3 class="calc__container__title">Ile zaoszczędzisz?</h3>
           <p class="calc__container__description">Rachunek jest prosty.</p>
-          <div class="calc__container__quantityGlass">
-            <h4 class="calc__container__quantityGlass__description">
-              Ile pojemników na szkło zapełniasz miesięcznie?
-            </h4>
-            <input class="calc__container__quantityGlass__input" type="number" placeholder="20" />
-          </div>
-          <div class="calc__container__sum">
-            <h4 class="calc__container__sum__description">
-              Ile płacisz za wywóz jednego pojemnika na szkło?
-            </h4>
-            <input class="calc__container__sum__input" type="number" placeholder="20" />
-          </div>
-          <div class="calc__container__total">
-            <h4 class="calc__container__total__description">Dzięki kruszarce zaoszczędzisz</h4>
-            <p class="calc__container__total__money">900 zł</p>
-            <p class="calc__container__total__period">rocznie.</p>
-          </div>
+            <div class="calc__container__manual">
+              <div class="calc__container__quantityGlass">
+                <h4 class="calc__container__quantityGlass__description">
+                  Ile pojemników na szkło zapełniasz miesięcznie?
+                </h4>
+                <input class="calc__container__quantityGlass__input" type="number" placeholder="20" />
+              </div>
+              <div class="calc__container__sum">
+                <h4 class="calc__container__sum__description">
+                  Ile płacisz za wywóz jednego pojemnika na szkło?
+                </h4>
+                <input class="calc__container__sum__input" type="number" placeholder="20" />
+              </div>
+            </div>
+              <div class="calc__container__total">
+                <h4 class="calc__container__total__description">Dzięki kruszarce zaoszczędzisz</h4>
+                <p class="calc__container__total__money">900 zł</p>
+                <p class="calc__container__total__period">rocznie.</p>
+                </div>
         </div>
       </section>
       <!-- offer -->
