--- a/src/index.html
+++ b/src/index.html
@@ -121,13 +121,13 @@
                 <h4 class="calc__container__quantityGlass__description">
                   Ile pojemników na szkło zapełniasz miesięcznie?
                 </h4>
-                <input class="calc__container__quantityGlass__input" type="number" placeholder="20" />
+                <input class="calc__container__quantityGlass__input" type="number" placeholder="20" id="inputOne" />
               </div>
               <div class="calc__container__sum">
                 <h4 class="calc__container__sum__description">
                   Ile płacisz za wywóz jednego pojemnika na szkło?
                 </h4>
-                <input class="calc__container__sum__input" type="number" placeholder="20" />
+                <input class="calc__container__sum__input" type="number" placeholder="20" id="inputTwo" />
               </div>
             </div>
               <div class="calc__container__total">
